--- a/BootStrap/Assignment/portfolio/index.html
+++ b/BootStrap/Assignment/portfolio/index.html
@@ -34,7 +34,12 @@
       </div>
       <div>
         <span>SIGN IN</span>
-        <button class="bg-black text-white p-2 rounded-2 ms-4 border-0" style="width: 110px"> BLOCKS </button>
+        <button
+          class="bg-black text-white p-2 rounded-2 ms-4 border-0"
+          style="width: 110px"
+        >
+          BLOCKS
+        </button>
       </div>
     </header>
 
@@ -401,48 +406,112 @@
         </p>
       </div>
 
-      <div style="gap: 200px; margin: 150px  100px;" class="d-flex">
-        <div style="width: 400px;" class="">
+      <div style="gap: 200px; margin: 150px 100px" class="d-flex">
+        <div style="width: 400px" class="">
           <h1>Mobile App Development</h1>
           <p class="text-secondary">
-            I had the pleasure of working with Om on a critical web
-            development project, and I can confidently say that their expertise
-            and professionalism exceeded my expectations.
+            I had the pleasure of working with Om on a critical web development
+            project, and I can confidently say that their expertise and
+            professionalism exceeded my expectations.
           </p>
           <div><b>Sundar Pichai - CEO Google</b></div>
           <div class="text-secondary">Marketing @ ALPHABET INC.</div>
         </div>
-        <div><img style="height: 300px; width: 200px;" class="rounded-4 w-100" src="../Task2/Asserts/Sundar.webp" alt=""></div>
-      </div>
-
-      <div style="" class="text-center">POPULAR CLIENTS</div>
-      <h1 class="text-center">Trusted by over 10,000+ clients</h1>
-      <div class="d-flex justify-content-center">
+        <div>
           <img
-            style="width: 175px; height: 100px"
-            src="../Task2/Asserts/logo-coinbase.svg"
-          />
-          <img
-            style="width: 175px; height: 100px"
-            src="../Task2/Asserts/logo-spotify.svg"
-          />
-          <img
-            style="width: 175px; height: 100px"
-            src="../Task2/Asserts/logo-pinterest.svg"
-          />
-          <img
-            style="width: 175px; height: 100px"
-            src="../Task2/Asserts/logo-google.svg"
-          />
-          <img
-            style="width: 175px; height: 100px"
-            src="../Task2/Asserts/logo-amazon.svg"
-          />
-          <img
-            style="width: 175px; height: 100px"
-            src="../Task2/Asserts/logo-netflix.svg"
+            style="height: 300px; width: 200px"
+            class="rounded-4 w-100"
+            src="../Task2/Asserts/Sundar.webp"
+            alt=""
           />
         </div>
+      </div>
+
+      <div class="text-center">POPULAR CLIENTS</div>
+      <h1 class="text-center">Trusted by over 10,000+ clients</h1>
+      <div class="d-flex justify-content-center " style="margin-bottom: 100px;">
+        <img
+          style="width: 175px; height: 100px"
+          src="../Task2/Asserts/logo-coinbase.svg"
+        />
+        <img
+          style="width: 175px; height: 100px"
+          src="../Task2/Asserts/logo-spotify.svg"
+        />
+        <img
+          style="width: 175px; height: 100px"
+          src="../Task2/Asserts/logo-pinterest.svg"
+        />
+        <img
+          style="width: 175px; height: 100px"
+          src="../Task2/Asserts/logo-google.svg"
+        />
+        <img
+          style="width: 175px; height: 100px"
+          src="../Task2/Asserts/logo-amazon.svg"
+        />
+        <img
+          style="width: 175px; height: 100px"
+          src="../Task2/Asserts/logo-netflix.svg"
+        />
+      </div>
+
+      <h1 class="text-center ">Contact Us</h1>
+      <p class=" m-auto fs-4 w-50 text-secondary mb-5 mt-3">
+        Ready to get started? Feel free to reach out through the contact form,
+        and let's embark on a journey of innovation and success.
+      </p>
+
+      <div class="container d-flex ">
+        <div class="container bg-black text-white text-centre p-5 rounded-4">
+          <div><h2>Contact Information</h2></div>
+          <p class="text-secondary">Fill up the form and our Team will get back to you within 24 hours.</p>
+          <br>
+          <div>
+            <label for=""><i class="bi bi-telephone-fill"></i></label>
+            <div class="d-inline-block"><a class="text-decoration-none text-white ms-2" href="tel: +919229786134">9229786134</a></div>
+
+          </div>
+
+          <div>
+            <label for=""><i class="bi bi-envelope-fill"></i></label>
+            <div class="d-inline-block"><a class="text-decoration-none text-white ms-2" href="mailto:dwivediom@gmail.com">dwivediom@gmail.com</a></div>
+          </div>
+          <div>
+            <label for=""><i class="bi bi-ticket-perforated-fill"></i></label>
+            <div class="d-inline-block ms-2">Open Support Ticket</div>
+          </div>
+
+        </div>
+
+        <div class="container">
+          <div class="d-flex gap-5 my-2">
+            <div class="border-bottom w-50 py-2">
+              <label for="" >First Name</label>
+              <input class="d-block border-0" type="text" name="firstName" placeholder="eg. Om">
+            </div>
+
+            <div class="border-bottom w-50 py-2">
+              <label for="">Last Name</label>
+              <input class="d-block border-0" type="text" name="" value="" placeholder="eg. Dwivedi">
+            </div>
+
+          </div>
+          <div class="border-bottom w-100 py-2 my-2">
+            <label for="">Email</label>
+            <input class="d-block border-0" type="text" name="" value="" placeholder="eg. Dwivedi@gmail.com">
+          </div>
+
+          <div>What are you interested on?</div>
+          <div>
+            <input type="radio" name="" id="">
+            <input type="radio" name="" id="">
+            <input type="radio" name="" id="">
+            <input type="radio" name="" id="">
+          </div>
+        </div>
+
+      </div>
 
     </div>
 
