--- a/BootStrap/Assignment/portfolio/index.html
+++ b/BootStrap/Assignment/portfolio/index.html
@@ -505,9 +505,13 @@
           <div>What are you interested on?</div>
           <div>
             <input type="radio" name="" id="">
+            <label for="">Design</label>
             <input type="radio" name="" id="">
+            <label for="">Development</label>
             <input type="radio" name="" id="">
+            <label for="">Support</label>
             <input type="radio" name="" id="">
+            <label for="">Otherertiop</label>
           </div>
         </div>
 
