--- a/JavaScript/Assignment/EnquiryForm/index.html
+++ b/JavaScript/Assignment/EnquiryForm/index.html
@@ -96,32 +96,40 @@
 
         <div class="row">
 
-          <div class="col">
+           <div class="col">
             <div>Interested in Which Course*</div>
-            <input class="" type="checkbox" name="FS" id="FS">
+            <input class="" type="checkbox" name="Full Stack" id="FS">
             <span for="FS">Full Stack Web Development - Placement</span>
 
-            <div><input type="checkbox" name="DS" id="DS"></div>
-            <span for="DS">Data Science with Python - Placement Oriented</span>
+            <div>
+              <input type="checkbox" name="Course" value="Data Science" id="DS">
+              <span for="DS">Data Science with Python - Placement Oriented</span>
+            </div>
+            <div>
+              <input type="checkbox" name="Course" value="Data Analytics" id="DA">
+              <span for="DA">Data Analytics with Python - Placement Oriented</span>
+            </div>
+            <div>
+              <input type="checkbox" name="Course" value="Business Analyst" id="BA">
+              <span for="BA">Business Analyst</span>
+            </div>
+            <div>
+              <input type="checkbox" name="Course" value="Java Programming" id="JP">
+              <span for="JP">Java Programming</span>
+            </div>
 
-            <div><input type="checkbox" name="DA" id="DA"></div>
-            <span for="DA">Data Analytics with Python - Placement Oriented</span>
-
-            <div><input type="checkbox" name="BA" id="BA"></div>
-            <span for="BA">Business Analyst</span>
-
-            <div><input type="checkbox" name="JP" id="JP"></div>
-            <span for="JP">Java Programming</span>
-
-            <div><input type="checkbox" name="PP" id="PP"></div>
-            <span for="PP">Python Programming</span>
-
-            <div><input type="checkbox" name="CP" id="CP"></div>
-            <span for="CP">C/C++ Programming</span>
-
-            <div><input type="checkbox" name="Other" id="Other"></div>
-            <span for="Other">Other</span>
-
+            <div>
+              <input type="checkbox" name="Course" value="Python Programming" id="PP">
+              <span for="PP">Python Programming</span>
+            </div>
+            <div>
+              <input type="checkbox" name="Course" value="C/C++ Programming" id="CP">
+              <span for="CP">C/C++ Programming</span>
+            </div>
+            <div>
+              <input type="checkbox" name="Course" value="Other" id="Other">
+              <span for="Other">Other</span>
+            </div>
             
           </div>
 
@@ -153,8 +161,7 @@
                 <option value="Amit">Amit</option>
               </select>
             </div>
-
-
+            
           </div>
         </div>
 
