--- a/JavaScript/toDoListPractice/index.html
+++ b/JavaScript/toDoListPractice/index.html
@@ -18,23 +18,21 @@
   </head>
   <body>
     <header>
-      <div
-        class="class = container-fluid bg-primary text-center fs-3 text-white"
-      >
-        TO DO LIST
+      <div class="container-fluid text-white bg-primary fs-2 text- text-center">
+        To Do List
       </div>
     </header>
 
     <main>
-      <div class="container d-flex gap-4 p-4">
+      <div class="container d-flex gap-5 p-5">
         <input
           class="form-control w-75"
           type="text"
-          name="task"
-          id="task"
-          placeholder="Add your new task"
+          name="Task"
+          id="Task"
+          placeholder="Add you new Task"
         />
-        <button class="btn btn-primary w-25" id="NewTask" onclick="AddTask()">
+        <button class="btn btn-primary" id="NewTask">
           <i class="bi bi-plus-circle"></i> Add Task
         </button>
       </div>
@@ -43,14 +41,14 @@
         <ol id="TaskList">
 
           <li class="p-2 d-flex align-items-center border-bottom" >
-            <!-- <div class="w-75">
+            <div class="w-75">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat
             </div>
 
             <button class="btn btn-danger ms-3">
               <i class="bi bi-trash3"></i> Delete
             </button>
-          </li> -->
+          </li>
 
 
 
