--- a/JavaScript/toDoListPractice/index.html
+++ b/JavaScript/toDoListPractice/index.html
@@ -32,7 +32,7 @@
           id="Task"
           placeholder="Add you new Task"
         />
-        <button class="btn btn-primary" id="NewTask">
+        <button class="btn btn-primary" id="NewTask" onclick="AddTask()">
           <i class="bi bi-plus-circle"></i> Add Task
         </button>
       </div>
