--- a/JavaScript/Test/index.html
+++ b/JavaScript/Test/index.html
@@ -10,19 +10,44 @@
       integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header
       class="px-5 bg-primary d-flex gap-3 justify-content-between fs-3 position-sticky sticky-top"
     >
-      <div class=" "><a class="text-decoration-none text-black" href="../Test/index.html" target="_self">Home</a></div>
-      <div class=" "><a class="text-decoration-none text-black" href="../Test/differentPages/Courses/Course.html" target="_self">Courses</a></div>
+      <div class=" ">
+        <a
+          class="text-decoration-none text-black"
+          href="../Test/index.html"
+          target="_self"
+          >Home</a
+        >
+      </div>
+      <div class=" ">
+        <a
+          class="text-decoration-none text-black"
+          href="../Test/differentPages/Courses/Course.html"
+          target="_self"
+          >Courses</a
+        >
+      </div>
       <div class="text-black">About</div>
       <div class="text-black">Contact</div>
     </header>
 
-    <div class="container border my-5 text-center shadow rounded-4" id="hero" style="border-color: rgb(97, 94, 94);">
+    <div
+      class="container border my-5 text-center shadow rounded-4"
+      id="hero"
+      style="border-color: rgb(97, 94, 94)"
+    >
       <h1 class="my-5">Learn Coding with Us</h1>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet natus
@@ -30,9 +55,16 @@
         consequatur quos officia. Eveniet dolorem reiciendis aliquid at, saepe
         necessitatibus veritatis quasi pariatur.
       </p>
-      <button class="m-5 btn btn-outline-primary "><a class="text-decoration-none" href="../Test/differentPages/Courses/Course.html" target="_blank"> Get Started</a></button>
+      <button class="m-5 btn btn-outline-primary">
+        <a
+          class="text-decoration-none"
+          href="../Test/differentPages/Courses/Course.html"
+          target="_blank"
+        >
+          Get Started</a
+        >
+      </button>
     </div>
-    
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
