--- a/JavaScript/RoughCopy/index.html
+++ b/JavaScript/RoughCopy/index.html
@@ -14,17 +14,34 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
     />
+
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    
-    <button class="m-5" id="me">Click Me!</button>
+    <div class="d-flex flex-column">
+      <label class="w-25 mx-2 my-1" for="name">Name: </label>
+      <input class="w-25 mx-2 my-1" type="text" name="name" id="name" />
+      <label class="w-25 mx-2 my-1" for="Work">work: </label>
+      <input class="w-25 mx-2 my-1" type="text" name="work" id="work" />
+      <label class="w-25 mx-2 my-1" for="para">text: </label>
+      <input class="w-25 mx-2 my-1" type="text" name="para" id="para" />
+      <input class="d-none" type="file" id="file" />
+      <button class="w-25 mx-2 my-1 btn btn-outline-success" onclick="om()">
+        Upload Here
+      </button>
+    </div>
 
-
-
-
-
-
-
+    <div class="container border border-secondary shadow rounded-4 my-5 w-25">
+      <img
+      class="mx-5 my-3"
+      style="width: 100px; height: 100px; border-radius: 50%;"
+        src="../RoughCopy/editedImage.png"
+        alt=""
+      />
+      <h1>Om Dwivedi</h1>
+      <h4>Content creator</h4>
+      <p>sakdjhsdkjaks@asdja</p>
+    </div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
