--- a/JavaScript/FinalProjects/Test2/index.html
+++ b/JavaScript/FinalProjects/Test2/index.html
@@ -23,7 +23,7 @@
 
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body id="body" class="position-relative bg-primary" >
+  <body id="body" class="position-relative" >
     <div class="container-fluid d-flex my-4 gap-3">
       <select id="state" class="w-50" onchange="om()">
         <option value="" selected disabled>--Select State Name--</option>
