--- a/JavaScript/RoughCopy/index.html
+++ b/JavaScript/RoughCopy/index.html
@@ -29,6 +29,9 @@
       <button class="w-25 mx-2 my-1 btn btn-outline-success" onclick="om()">
         Upload Here
       </button>
+      <button id="switch" class="w-25 mx-2 my-1 btn btn-warning" onclick="abc()">
+        ON
+      </button>
     </div>
 
     <div class="container border border-secondary shadow rounded-4 my-5 w-25">
