--- a/JavaScript/Assignment/CoachingInstituteRegistrationForm/index.html
+++ b/JavaScript/Assignment/CoachingInstituteRegistrationForm/index.html
@@ -379,6 +379,9 @@
           </div>
         </section>
       </article>
+
+      <button class="btn btn-outline-success container w-25 my-4" id="submit">Submit</button>
+
     </main>
 
     <script
