--- a/JavaScript/Assignment/ShoppingWebiste/product2.html
+++ b/JavaScript/Assignment/ShoppingWebiste/product2.html
@@ -35,8 +35,8 @@
       </nav>
     </header>
 
-    <div class="container border border-dark border-3 p-3" id="productRow">
-      <div class="row">
+    <div id="baap" class="container border border-dark border-3 p-3" id="productRow">
+      <div class="row my-2">
         <div class="col-3">
           <div
             class="card"
@@ -44,7 +44,7 @@
           >
             <img
               src="./fresh-vegetables-food.jpg"
-              class="object-fit-contain"
+              class="object-fit-contain rounded-3"
               alt=""
             />
           </div>
