--- a/JavaScript/Assignment/CoachingInstituteRegistrationForm/index.html
+++ b/JavaScript/Assignment/CoachingInstituteRegistrationForm/index.html
@@ -123,7 +123,7 @@
 
         <section class="container d-flex my-4">
           <label for="Qualification" class="w-50"
-            >Last Cxyzpleted Qualification:</label
+            >Last Completed Qualification:</label
           >
 
           <select
